# ffhs-dua

./: .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-test.txt  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.html  RELEASE_NOTES_v1.1.0.md  build.gradle  index.html  pyproject.toml  validate_migration.py
.claude/: settings.local.json
.claude/commands/: analyse-algorithm.md  create-summary.md  prepare-pva-5.md
.github/workflows/: README.md  code-quality.yml  documentation.yml  release.yml  tests.yml
algs4/: __init__.py
algs4/data/: brownian.txt  diffusion.txt
algs4/errors/: __init__.py
algs4/fundamentals/: __init__.py  bag.py  queue.py  stack.py  uf.py
algs4/sorting/: shell.py
benchmarks/: README.md  __init__.py  sorting_benchmarks.py
data/: FILE_ORGANIZATION.md
data/graphs/: mediumDG.txt  tinyDAG.txt
data/large/: .gitkeep  1Mints.txt  mobydick.txt
data/medium/: .gitkeep  1Kints.txt
data/small/: .gitkeep  abra.txt  in1.txt  in2.txt  ip.csv  rates.txt
data/strings/: README.md  ababLZW.txt  abraLZW.txt  genomeTiny.txt  genomeVirus.txt  medTale.txt  shellsST.txt  tale.txt  words3.txt
doc/: index.adoc  references.adoc
docs/: bag_erweiterungen.adoc  benchmarks.md  ci-cd.md  coverage.md  graphs.md  heap_sort_documentation.adoc  index.adoc  komplexitaetsanalyse.adoc  markdown-linting.adoc  migrate-doc-prompt.md  pre-commit-setup.md  project-metadata.md  quick_sort_documentation.adoc  test_bag_documentation.adoc  test_heap_documentation.adoc  test_queue_documentation.adoc  test_quick_documentation.adoc  test_stack_documentation.adoc  test_uf_documentation.adoc  union_find_documentation.adoc  uv_tutorial.adoc
docs/api/: fundamentals.adoc  sorting.adoc
docs/summaries/: boyer_moore.md  kmp.md  rabin_karp.md  tourverschmelzung.md  tries.md
docs/tex/: .gitignore  Makefile  README.md  build.py  dua-dokumentation.tex
docs/tex/config/: build.yaml
docs/tex/content/chapters/: 00_kursuebersicht.tex  02_union_find.tex
docs/tex/converter/: __init__.py  config.py  context_generator.py  markdown_parser.py  utils.py
docs/tex/examples/: simple_build.py
docs/tex/templates/: main.tex
docs/tex/templates/components/: index.tex  titlepage.tex  toc.tex
docs/tex/templates/styles/: code.tex  colors.tex  layout.tex  typography.tex
docs/tutorials/: getting_started.adoc
notebooks/pva1/: __init__.py  grundlagen.ipynb  sierpinski.adoc  sierpinski.py
notebooks/pva2/: 01 sortier_slides.html  03 quicksort_presentation.adoc
notebooks/pva3/: uebung_bst_validierung.md  uebung_bst_validierung_loesung.py  uebung_hashtabelle_sondierung.md  uebung_hashtabelle_sondierung_loesung.py
pva/pva1/: grundlagen.ipynb  sierpinski.adoc
pva/pva2/: 01 sortier_slides.html  02 komplexitaet_slides.html  03 quicksort_presentation.adoc  04 mergesort_presentation.adoc  05 heapsort_presentation.adoc
pva/pva3/: uebung_bst_validierung.md  uebung_bst_validierung_loesung.py  uebung_hashtabelle_sondierung.md  uebung_hashtabelle_sondierung_loesung.py
pva/pva4/: CODE_BEISPIELE.md  GRUPPENARBEIT_UEBERSICHT.adoc  GRUPPENARBEIT_UEBERSICHT.md  MUSTERLOESUNG_GRUPPE_1_BFS_DFS.md  MUSTERLOESUNG_GRUPPE_2_KUERZESTE_WEGE.md  MUSTERLOESUNG_GRUPPE_3_SPANNBAEUME.md  MUSTERLOESUNG_GRUPPE_4_UNION_FIND.md  README.md  UEBUNGEN_UND_BEISPIELE.md  beispiele_gruppe_1_bfs_dfs.py  beispiele_gruppe_2_kuerzeste_wege.py  beispiele_gruppe_3_spannbaeume.py  beispiele_gruppe_4_union_find.py  gruppe_1_bfs_dfs.adoc  gruppe_2_kuerzeste_wege.adoc  gruppe_3_spannbaeume.adoc  gruppe_4_union_find.adoc  praesentations_template.adoc  prompt.md  test_beispiele.py
pva/pva5/: README.md  team1_tries.md  team2_kmp.md  team3_boyer_moore.md  team4_rabin_karp.md  zeitplanung.html
pva1/: grundlagen.ipynb  sierpinski.adoc  stern_rekursiv.py
scripts/: README.md  generate_coverage.py  generate_coverage.sh  setup_dev.py
src/algs4/: __init__.py
src/algs4/errors/: __init__.py  errors.py
src/algs4/fundamentals/: __init__.py  bag.py  stack.py  uf.py
src/algs4/pva_1_fundamentals/: __init__.py  bag.py  queue.py  stack.py  uf.py
src/algs4/pva_2_sorting/: __init__.py  heap.py  merge.py  quick.py  shell.py
src/algs4/pva_3_searching/: __init__.py  avl.py  bst.py  hashing.py  red_black_bst.py
src/algs4/pva_4_graphs/: __init__.py  bfs.py  dfs_paths.py  dijkstra_sp.py  directed_dfs.py  directed_edge.py  edge.py  edge_weighted_digraph.py  edge_weighted_directed_cycle.py  edge_weighted_graph.py  index_min_pq.py  kruskal_mst.py  prim_mst.py  topological.py
src/algs4/pva_5_strings/: __init__.py  boyer_moore.py  kmp.py  patricia_trie.py  rabin_karp.py  trie_st.py
src/algs4/sorting/: __init__.py  heap.py  merge.py  quick.py
src/main/java/openai/: OpenAIClient.java
src/main/python/: kmp.py
src/main/python/pva1/: README.md  common.py  linked_list.py  module_1_1.py  module_1_3.py
src/main/python/pva2/: union.py
src/main/python/pva3/: comparable.py  insertion_sort.py
src/main/python/pva4/: BinarySearch.py  Test.py  TreeNode.py  (+5 more)
src/main/resources/: Collection Framework.puml
src/utils/: README.md  __init__.py  timing.py
tests/: __init__.py  conftest.py  test_bag.py  test_queue.py  test_shell.py  test_uf.py
tests/fixtures/: sample_data.py
tests/test_fundamentals/: __init__.py  test_bag.py  test_bag_old.py  test_queue.py  test_queue_old.py  test_stack.py  test_stack_old.py  test_uf.py  test_uf_old.py
tests/test_graphs/: __init__.py  test_bfs.py  test_dfs_paths.py  test_dijkstra_sp.py  test_directed_dfs.py  test_directed_edge.py  test_edge.py  test_edge_weighted_digraph.py  test_edge_weighted_directed_cycle.py  test_edge_weighted_graph.py  test_index_min_pq.py  test_kruskal_mst.py  test_prim_mst.py  test_topological.py
tests/test_searching/: __init__.py  test_avl.py  test_bst.py  test_hashing.py  test_red_black_bst.py
tests/test_sorting/: __init__.py  test_heap.py  test_merge.py  test_quick.py  test_shell.py
tests/test_strings/: __init__.py  test_boyer_moore.py  test_kmp.py  test_patricia_trie.py  test_rabin_karp.py  test_trie_st.py
tests/test_utils/: __init__.py  test_timing.py
(+62 files in other folders)
