[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "ffhs-dua"
version = "1.0.0"
description = "Umfassende Python-Implementierung grundlegender Algorithmen und Datenstrukturen für den akademischen Gebrauch an der Fernfachhochschule Schweiz (FFHS)"
readme = "README.md"
requires-python = ">=3.13.1"
license = {text = "MIT"}
authors = [
    {name = "Daniel Senften", email = "daniel.senften@ffhs.ch"}
]
maintainers = [
    {name = "Daniel Senften", email = "daniel.senften@ffhs.ch"}
]
keywords = [
    "algorithms",
    "data-structures",
    "education",
    "ffhs",
    "sorting",
    "searching",
    "union-find",
    "binary-search-tree",
    "avl-tree",
    "red-black-tree"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: German",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "matplotlib>=3.10.5",
]

[project.urls]
Homepage = "https://gitlab.com/talent-factory/ffhs/dua"
Documentation = "https://gitlab.com/talent-factory/ffhs/dua/-/blob/develop/docs/index.adoc"
Repository = "https://gitlab.com/talent-factory/ffhs/dua.git"
Issues = "https://gitlab.com/talent-factory/ffhs/dua/-/issues"
Changelog = "https://gitlab.com/talent-factory/ffhs/dua/-/blob/develop/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.12.10",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "jupyter>=1.1.1",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-v"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/algs4"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 2

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
